# dlai-course-downloader

./: .gitignore  README.md  README.zh-CN.md  download_course.py  download_course.sh  export_csv.sh  pyproject.toml
dlai_downloader/: __init__.py  commands.py  core.py
scripts/: export_csv.py
