[project]
name = "dlai-course-downloader"
version = "0.1.0"
description = "Download or export CSV of DeepLearning.AI short course videos using Chrome cookies and yt-dlp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
