[project]
name = "dlai-course-downloader"
version = "0.1.0"
description = "Download or export CSV of DeepLearning.AI short course videos using Chrome cookies and yt-dlp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "yt-dlp>=2024.8.6",
]

[project.scripts]
dl-download = "dlai_downloader.commands:download_main"
dl-export-csv = "dlai_downloader.commands:export_csv_main"

[project.urls]
Homepage = "https://github.com/yangping/dlai-course-downloader"
Repository = "https://github.com/yangping/dlai-course-downloader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dlai_downloader"]

[tool.uv]
index-url = "https://pypi.org/simple"
